[package]
name = "webserver"
version = "0.2.5"
authors = ["Jack DeNeut <jdeneut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
# ORM
diesel = { version = "1.4.5", features = ["postgres","r2d2", "uuid", "serde_json", "chrono", "numeric"] }
# libraries that do SERialzation and DEserialization for Rust structs 
serde = "1.0"
serde_json = "1.0.57"
serde_derive = "1.0"
# some Rust structs for the GeoJSON format
geojson = "0.21.0"


# Needed for Postgres
openssl = "*"
openssl-probe = "0.1.2"
rand = "0.7.3"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json", "uuid", "diesel_postgres_pool", "serde_json", "tera_templates", "helmet", "serve"]


# optimize release builds for execution speed, rather than binary size
[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
opt-level = 3